// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcIntegrationTab should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              AgencyCloud Integration
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-ac-inegrated"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="desktopIntegrationTypeIds"
              label="Integration Type"
              name="desktopIntegrationTypeIds"
              placeholder="Please select"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            >
              <span
                class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <p>
                Please select from the options below
              </p>
            </div>
            <div
              class="ef7odf0-el-multi-select-un-selected"
            >
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                MOCK_NAME
              </label>
            </div>
          </div>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            AgencyCloud Integration
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-ac-inegrated"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="eooz7jy-el-multi-select-input-wrapper"
        >
          <input
            class="eg4njbl-el-multi-select-input"
            id="desktopIntegrationTypeIds"
            label="Integration Type"
            name="desktopIntegrationTypeIds"
            placeholder="Please select"
          />
          <div
            class="e12c6sou-el-multi-select-selected"
          >
            <span
              class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <p>
              Please select from the options below
            </p>
          </div>
          <div
            class="ef7odf0-el-multi-select-un-selected"
          >
            <input
              class="e1wdkc9j-el-multi-select-checkbox"
              id="test-static-id"
              type="checkbox"
            />
            <label
              class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
              for="test-static-id"
            >
              MOCK_NAME
            </label>
          </div>
        </div>
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AcIntegrationTab should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              AgencyCloud Integration
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-ac-inegrated"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="ebhrnzh-el-loader-container"
          >
            <div
              class="eq1m1jz-el-loader"
            >
              <div
                class="exikdu1-el-loader-moving-bar"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            AgencyCloud Integration
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-ac-inegrated"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="ebhrnzh-el-loader-container"
        >
          <div
            class="eq1m1jz-el-loader"
          >
            <div
              class="exikdu1-el-loader-moving-bar"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AcIntegrationTab should match a snapshot with no errors and empty types 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              AgencyCloud Integration
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-ac-inegrated"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="desktopIntegrationTypeIds"
              label="Integration Type"
              name="desktopIntegrationTypeIds"
              placeholder="Please select"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            >
              <span
                class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <p>
                Please select from the options below
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched from within AgencyCloud
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            AgencyCloud Integration
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-ac-inegrated"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="eooz7jy-el-multi-select-input-wrapper"
        >
          <input
            class="eg4njbl-el-multi-select-input"
            id="desktopIntegrationTypeIds"
            label="Integration Type"
            name="desktopIntegrationTypeIds"
            placeholder="Please select"
          />
          <div
            class="e12c6sou-el-multi-select-selected"
          >
            <span
              class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <p>
              Please select from the options below
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
